Add news item for rainbow

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p>This is a website about color!</p>
     <h2 style="color: #c00">News</h2>
     <ul>
-      <li>Nothing going on (yet)</li>
+      <li><a href="rainbow.html">Our New Rainbow</a></li>
     </ul>
     <h2>Navigation</h2>
     <ul>
@@ -22,7 +22,7 @@
       </li>
       <li>
         <a href="rainbow.html">The Rainbow Page</a>
-      </li>        
+      </li>
     </ul>
   </body>
 </html>
